Fix spacing and alignment of MR discussion box; Move download and checkout buttons onto new line; wrap branch name normally

--- a/app/assets/stylesheets/pages/detail_page.scss
+++ b/app/assets/stylesheets/pages/detail_page.scss
@@ -19,7 +19,6 @@
 }
 
 .detail-page-description {
-  margin-top: 16px;
 
   .title {
     margin: 0 0 16px;
@@ -37,5 +36,9 @@
         margin-bottom: 0;
       }
     }
+  }
+
+  &.mr-description {
+    margin-top: 16px;
   }
 }
